Adds Video too long popup

--- a/Sources/en.lproj/Localizable.strings
+++ b/Sources/en.lproj/Localizable.strings
@@ -11,3 +11,5 @@
 "YPFusumaVideo" = "Video";
 "YPFusumaNext" = "Next";
 "YPFusumaFilter" = "Filter";
+"YPFusumaVideoTooLongTitle" = "Too long";
+"YPFusumaVideoTooLongDetail" = "Pick a video less than 60 seconds long.";
